--- a/mapping.json
+++ b/mapping.json
@@ -175,7 +175,7 @@
   "XX-00-GM-NA-0-C": "gid://shopify/ProductVariant/56343293919567",
   "LU-00-PM-ROS-0": "gid://shopify/ProductVariant/56343293788495",
   "XX-00-GM-NA-0-D": "gid://shopify/ProductVariant/56343293821263",
-  "LU-00-PM-NOI-0": "gid://shopify/ProductVariant/56343293722959",
+  "LU-00-PM-NOI-0-D": "gid://shopify/ProductVariant/56343293722959",
   "XX-00-GM-NA-0-E": "gid://shopify/ProductVariant/56343293755727",
   "LU-00-PM-NA-0-D": "gid://shopify/ProductVariant/56343293657423",
   "XX-00-GM-NA-0-F": "gid://shopify/ProductVariant/56343293690191",
@@ -183,7 +183,7 @@
   "XX-00-GM-NA-0-G": "gid://shopify/ProductVariant/56343293591887",
   "LU-00-PM-ROS-0-C": "gid://shopify/ProductVariant/56343293493583",
   "XX-00-GM-NA-0-H": "gid://shopify/ProductVariant/56343293526351",
-  "LU-00-PM-NOI-0-B": "gid://shopify/ProductVariant/56343293428047",
+  "XX-00-GM-NA-0-g": "gid://shopify/ProductVariant/56343293428047",
   "XX-00-GM-NA-0-I": "gid://shopify/ProductVariant/56343293460815",
   "LU-1-NA-NA-0": "gid://shopify/ProductVariant/56343293231439",
   "XX-2-NA-NA-0": "gid://shopify/ProductVariant/56343293264207",
